{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 69,
  "lineage": "2eaa8cd1-2ab1-963b-011c-d9e091cf7a31",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:601457281385:security-group/sg-02c11c4a770fa0a44",
            "description": "Allow HTTP traffic to ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-02c11c4a770fa0a44",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-sg",
            "name_prefix": "",
            "owner_id": "601457281385",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "alb-sg"
            },
            "tags_all": {
              "Name": "alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ae0dbb2e478973"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-0767046d1677be5a0",
            "arn": "arn:aws:ec2:eu-central-1:601457281385:instance/i-041938f59a43f427f",
            "associate_public_ip_address": true,
            "availability_zone": "eu-central-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-041938f59a43f427f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0efc8dd97d0fdc903",
            "private_dns": "ip-10-0-10-251.eu-central-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.251",
            "public_dns": "ec2-3-71-189-151.eu-central-1.compute.amazonaws.com",
            "public_ip": "3.71.189.151",
            "region": "eu-central-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0bfa015843ea64ddf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-078363b8afc2a943c",
            "tags": {
              "Name": "AppInstance"
            },
            "tags_all": {
              "Name": "AppInstance"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a6e167c1cdd5597a"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.ec2.aws_security_group.ec2_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "ec2_attach",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:targetgroup/dev-app-tg/3b95eb9d4ec78219-20250710194901353400000002",
            "port": 80,
            "region": "eu-central-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:targetgroup/dev-app-tg/3b95eb9d4ec78219",
            "target_id": "i-041938f59a43f427f"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.ec2.aws_instance.app",
            "module.ec2.aws_security_group.ec2_sg",
            "module.loadbalancer.aws_lb_target_group.app_tg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:601457281385:security-group/sg-0a6e167c1cdd5597a",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a6e167c1cdd5597a",
            "ingress": [
              {
                "cidr_blocks": [
                  "88.212.17.33/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-02c11c4a770fa0a44"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "ec2-sg",
            "name_prefix": "",
            "owner_id": "601457281385",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ec2-sg"
            },
            "tags_all": {
              "Name": "ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-074ae0dbb2e478973"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb",
      "name": "app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:loadbalancer/app/app-loadbalancer/e65a784d0cb3d4ba",
            "arn_suffix": "app/app-loadbalancer/e65a784d0cb3d4ba",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "app-loadbalancer-790821870.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:loadbalancer/app/app-loadbalancer/e65a784d0cb3d4ba",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "app-loadbalancer",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-02c11c4a770fa0a44"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06416922f4cce0b81"
              },
              {
                "subnet_id": "subnet-078363b8afc2a943c"
              }
            ],
            "subnets": [
              "subnet-06416922f4cce0b81",
              "subnet-078363b8afc2a943c"
            ],
            "tags": {
              "Name": "dev-app-alb"
            },
            "tags_all": {
              "Name": "dev-app-alb"
            },
            "vpc_id": "vpc-074ae0dbb2e478973",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:loadbalancer/app/app-loadbalancer/e65a784d0cb3d4ba"
          },
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:listener/app/app-loadbalancer/e65a784d0cb3d4ba/051b132fdb429c48",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:targetgroup/dev-app-tg/3b95eb9d4ec78219",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:listener/app/app-loadbalancer/e65a784d0cb3d4ba/051b132fdb429c48",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:loadbalancer/app/app-loadbalancer/e65a784d0cb3d4ba",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.alb_sg",
            "module.loadbalancer.aws_lb.app_alb",
            "module.loadbalancer.aws_lb_target_group.app_tg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.loadbalancer",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:targetgroup/dev-app-tg/3b95eb9d4ec78219",
            "arn_suffix": "targetgroup/dev-app-tg/3b95eb9d4ec78219",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/api/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:601457281385:targetgroup/dev-app-tg/3b95eb9d4ec78219",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-central-1:601457281385:loadbalancer/app/app-loadbalancer/e65a784d0cb3d4ba"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "dev-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "dev-app-tg"
            },
            "tags_all": {
              "Name": "dev-app-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-074ae0dbb2e478973"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:601457281385:internet-gateway/igw-022009856127d638c",
            "id": "igw-022009856127d638c",
            "owner_id": "601457281385",
            "region": "eu-central-1",
            "vpc_id": "vpc-074ae0dbb2e478973"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:601457281385:route-table/rtb-05fe095929c072619",
            "id": "rtb-05fe095929c072619",
            "owner_id": "601457281385",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-022009856127d638c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-074ae0dbb2e478973"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0959a3a4595145757",
            "region": "eu-central-1",
            "route_table_id": "rtb-05fe095929c072619",
            "subnet_id": "subnet-078363b8afc2a943c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1280357fa67e077",
            "region": "eu-central-1",
            "route_table_id": "rtb-05fe095929c072619",
            "subnet_id": "subnet-06416922f4cce0b81"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:601457281385:subnet/subnet-078363b8afc2a943c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078363b8afc2a943c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "601457281385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "vpc_id": "vpc-074ae0dbb2e478973"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:601457281385:subnet/subnet-06416922f4cce0b81",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06416922f4cce0b81",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "601457281385",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "vpc_id": "vpc-074ae0dbb2e478973"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:601457281385:vpc/vpc-074ae0dbb2e478973",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0876cd03af98337db",
            "default_route_table_id": "rtb-0c6fd66601a7b1c2d",
            "default_security_group_id": "sg-0fb6b9949ac8916b8",
            "dhcp_options_id": "dopt-0062053d40b2b8a08",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-074ae0dbb2e478973",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0c6fd66601a7b1c2d",
            "owner_id": "601457281385",
            "region": "eu-central-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}